Adcionando novas imagens

--- a/home/index.html
+++ b/home/index.html
@@ -32,6 +32,32 @@
         <div class = "memory-card">
 
             <div class="image"></div>
+            <h2>Viagem!</h2>
+            <p>Nesse dia eu conheci...</p>
+
+            </div>
+            <div class = "memory-card">
+                <div class="image2"></div>
+            <h2>Primeiro carro!</h2>
+            <p>Nesse dia eu comprei meu novo veiculo...</p>
+
+            </div>
+
+            <div class = "memory-card">
+                <div class="image3"></div>
+            <h2>Formatura!</h2>
+            <p>Formado em...</p>
+
+            </div>
+
+            <div class = "memory-card">
+                <div class="image4"></div>
+            <h2>Novo Hobbie!</h2>
+            <p>Nesse dia eu iniciei um novo hobbie...
+            </div>
+
+            <div class = "memory-card">
+                <div class="image5"></div>
             <h2>Meu afilhado!</h2>
             <p>Nesse dia recebi a noticia de ser padrinho...</p>
 
@@ -40,7 +66,9 @@
 
     </main>
 
-    <footer> <!-- rodape do site -->
+    <footer class=" app-footer"> <!-- rodape do site -->
+
+        <p>Mnemosyne - Felipe Alencar </p>
 
     </footer>
 
