--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -73,7 +73,7 @@
     </footer>
 
     <!-- <script src="script.js"></script> -->
-     <script src="condicionais.js"></script>
+     <script src="repeticoes.js"></script>
 </body>
 
 </html>
