Integração Front Back

--- a/html/sandbox/index.html
+++ b/html/sandbox/index.html
@@ -81,7 +81,7 @@
     </footer>
 
     <!-- <script src="script.js"></script> -->
-     <script src="repeticoes.js"></script>
+     <script src="uteis.js"></script>
 </body>
 
 </html>
